testsuite/tests/grammar/invalid_lkt/invalid_token.lkt
import lexer_example

@with_lexer(foo_lexer) grammar foo_grammar {
    @main_rule main_rule <- @UnknownToken
}

class FooNode implements Node[FooNode] {
}
